style: 홈 퍼블리싱

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@
 /* 전역 폰트 스타일 */
 body {
   font-family: Pretendard, 'Pretendard Variable', sans-serif;
-  background-color: #EDEDF4;
+  background-color: #ffffff;
   color: #000000;
 }
 
